# fetch-ff-ind-rtn

./: .gitignore  README.md  pyproject.toml
results/FF_Ind_Rtn/: FF_Ind_Rtn_1_equal.csv  FF_Ind_Rtn_1_value.csv
scripts/: main.py
src/fetch_ff_ind_rtn/: date_utils.py  download_ff.py  provider.py
